Wrap node and VM table cells in container to fix height and hide overflow to more gracefully handle small viewport widths

--- a/styles/theme/common.less
+++ b/styles/theme/common.less
@@ -242,6 +242,12 @@ table .dropdown-menu {
   .column-large {
     width: 250px;
   }
+  .cell-container {
+    height: 27px;
+    padding: 3px 5px;
+    overflow: hidden;
+    vertical-align: middle;
+  }
   caption + thead tr:first-of-type th,
   caption + thead tr:first-of-type td,
   colgroup + thead tr:first-of-type th,
