--- a/styles/theme/nodes.less
+++ b/styles/theme/nodes.less
@@ -45,6 +45,7 @@
           > th,
           > td {
             height: 27px;
+            padding: 0;
             border-bottom: 1px solid #ddd;
             .border-radius(0);
             input[type="radio"], input[type="checkbox"] {
